force-app/main/default/objects/ImporteSME__c/fields/Area_picklist__c.field-meta.xml
<CustomField>
    <fullName>Area_picklist__c</fullName>
    <label>Area_picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APS</fullName>
            </value>
            <value>
                <fullName>CIBER</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>ING</fullName>
            </value>
            <value>
                <fullName>MES</fullName>
            </value>
            <value>
                <fullName>OTROS</fullName>
            </value>
            <value>
                <fullName>GLOBAL</fullName>
            </value>
            <value>
                <fullName>MCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>