force-app/main/default/objects/ImporteSME__c/fields/Coste__c.field-meta.xml
<CustomField>
    <fullName>Coste__c</fullName>
    <label>Coste</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>