force-app/main/default/objects/ImporteSME__c/fields/Descuento__c.field-meta.xml
<CustomField>
    <fullName>Descuento__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% Descuento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>