force-app/main/default/objects/ImporteSME__c/fields/Importe_Bruto__c.field-meta.xml
<CustomField>
    <fullName>Importe_Bruto__c</fullName>
    <label>Importe Bruto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>