force-app/main/default/objects/ImporteSME__c/fields/Seccion__c.field-meta.xml
<CustomField>
    <fullName>Seccion__c</fullName>
    <label>Sección</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HARD</fullName>
            </value>
            <value>
                <fullName>MTTO.HARD</fullName>
            </value>
            <value>
                <fullName>SOFT</fullName>
            </value>
            <value>
                <fullName>MTTO.SOFT</fullName>
            </value>
            <value>
                <fullName>SRV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>