force-app/main/default/objects/ImporteSME__c/fields/Tipo_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Pago__c</fullName>
    <label>Tipo de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PLC</fullName>
            </value>
            <value>
                <fullName>YLC</fullName>
            </value>
            <value>
                <fullName>QLC</fullName>
            </value>
            <value>
                <fullName>PSC</fullName>
            </value>
            <value>
                <fullName>YSC</fullName>
            </value>
            <value>
                <fullName>QSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>